# parachain-template

./: .gitignore  Cargo.toml  Dockerfile.custom  Dockerfile.omni  Dockerfile.simple  FINAL-MIGRATION-STATUS.md  FINAL-SOLUTION.md  HOW-TO-RUN.md  MIGRATION-SUMMARY.md  README-OMNI-NODE.md  README.md  SOLUTION.md  chain_spec.json  dev_chain_spec.json  docker-compose.custom.yml  docker-compose.omni-host-binary.yml  docker-compose.omni-official.yml  docker-compose.omni-simple.yml  docker-compose.omni.yml  docker-compose.simple.yml  fix-keystore-docker.sh  fix-keystore.sh  para-state  para-wasm  para.json  plain_chain_spec.json  raw_chain_spec.json  run-docker-standalone.sh  run-node-docker.sh  run-standalone.sh  simple_chain_spec.json  standalone_dev.json  start-omni-node.sh
data/chains/custom/db/full/: 000050.sst  000051.sst  000053.sst  000054.sst  000055.sst  000108.sst  000156.sst  000159.sst  IDENTITY  LOG  MANIFEST-000057
data/chains/custom/network/: secret_ed25519
node/src/: chain_spec.rs  command.rs
offchain-utils/: Cargo.toml
pallets/custom-pallet/src/: lib.rs
pallets/dao/: Cargo.toml  README.md
pallets/dao/rpc/: Cargo.toml
pallets/dao/rpc/runtime-api/: Cargo.toml
pallets/dao/rpc/runtime-api/src/: lib.rs
pallets/dao/rpc/src/: lib.rs
pallets/dao/src/: benchmark.sh  benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/insurances/: Cargo.toml  README.md
pallets/insurances/rpc/: Cargo.toml
pallets/insurances/rpc/runtime-api/: Cargo.toml
pallets/insurances/rpc/runtime-api/src/: lib.rs
pallets/insurances/rpc/src/: lib.rs
pallets/insurances/src/: lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/marketplace/: Cargo.toml  README.md
pallets/marketplace/src/: benchmark.sh  benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/payout-processor/: Cargo.toml  README.md
pallets/payout-processor/rpc/: Cargo.toml
pallets/payout-processor/rpc/runtime-api/: Cargo.toml
pallets/payout-processor/rpc/runtime-api/src/: lib.rs
pallets/payout-processor/rpc/src/: lib.rs
pallets/payout-processor/src/: benchmark.sh  benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
runtime/: Cargo.toml  rustc-ice-2025-09-03T13_43_37-2252336.txt
runtime/src/: lib.rs
runtime/src/configs/: mod.rs  pallet_configs.rs
scripts/: run-local.sh
