[package]
name = "offchain-utils"
version = "0.1.0"
license.workspace = true
author.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
description = "Offchain utilities for parachain template."
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true, features = ["alloc", "arbitrary_precision"] }
serde = { workspace = true, optional = true }

# Use polkadot-sdk workspace dependency
polkadot-sdk = { workspace = true, features = [
	"frame-benchmarking",
	"frame-support",
	"frame-system", 
	"sp-application-crypto",
	"sp-core",
	"sp-io",
	"sp-runtime",
	"sp-std",
] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"polkadot-sdk/std",
	"log/std",
	"serde/std",
	"serde_json/std",
]

runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]