[package]
name = "offchain-utils"
version = "0.1.0"
license.workspace = true
author.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
description = "Offchain utilities for parachain template."
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true, features = ["alloc", "arbitrary_precision"] }
serde = { workspace = true, optional = true }

# Use individual crates for better compatibility
sp-core = { version = "36.0.0", default-features = false }
sp-io = { version = "40.0.0", default-features = false }
sp-runtime = { version = "41.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
frame-support = { version = "40.0.0", default-features = false }
frame-benchmarking = { version = "40.0.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"log/std",
	"serde/std",
	"serde_json/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = []
