[package]
name = "pallet-insurances"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
description = "Custom insurances pallet for parachain template."
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
num-traits = { version = "0.2.15", default-features = false }

# Use polkadot-sdk workspace dependency
polkadot-sdk = { workspace = true, features = [
	"frame-benchmarking",
	"frame-support", 
	"frame-system",
	"pallet-assets",
	"pallet-balances",
	"pallet-collective",
	"pallet-uniques",
	"sp-core",
	"sp-io", 
	"sp-runtime",
	"sp-std",
] }

offchain-utils = { workspace = true }

[dev-dependencies]
codec = { workspace = true }
polkadot-sdk = { workspace = true, features = [
	"pallet-assets",
	"pallet-balances", 
	"sp-core",
] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"polkadot-sdk/std",
	"log/std",
	"serde/std",
	"num-traits/std",
	"offchain-utils/std",
]

runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]
