[package]
name = "pallet-insurances"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
description = "Custom insurances pallet for parachain template."
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
num-traits = { version = "0.2.15", default-features = false }

# Use individual crates for better compatibility
frame-support = { version = "40.0.0", default-features = false }
frame-system = { version = "40.0.0", default-features = false }
frame-benchmarking = { version = "40.0.0", default-features = false, optional = true }
sp-core = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
pallet-uniques = { version = "40.0.0", default-features = false }

offchain-utils = { workspace = true }

[dev-dependencies]
codec = { workspace = true }
frame-support = { version = "40.0.0", default-features = false }
frame-system = { version = "40.0.0", default-features = false }
frame-benchmarking = { version = "40.0.0", default-features = false }
sp-core = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
pallet-uniques = { version = "40.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-uniques/std",
	"log/std",
	"serde/std",
	"num-traits/std",
	"offchain-utils/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = []
