[package]
name = "pallet-marketplace"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
description = "Custom marketplace pallet for parachain template."
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
num-traits = { version = "0.2.15", default-features = false }

# Use individual FRAME crates for better compatibility
frame-support = { version = "40.0.0", default-features = false }
frame-system = { version = "40.0.0", default-features = false }
frame-benchmarking = { version = "40.0.0", default-features = false }
sp-core = { version = "36.0.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-runtime = { version = "41.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-balances = { version = "42.0.0", default-features = false }
pallet-collective = { version = "40.0.0", default-features = false }
pallet-uniques = { version = "40.0.0", default-features = false }
# Dependencies on other custom pallets
pallet-insurances = { path = "../insurances", default-features = false }
# pallet-dao = { path = "../dao", default-features = false }  # Not migrated yet


[dev-dependencies]
codec = { workspace = true }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-balances = { version = "42.0.0", default-features = false }
sp-core = { version = "36.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-uniques/std",
	"pallet-insurances/std",
	"log/std",
	"serde/std",
	"num-traits/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-insurances/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-uniques/try-runtime",
	"pallet-insurances/try-runtime",
]
