[package]
name = "pallet-dao-rpc-runtime-api"
version = "4.0.0-dev"
authors = ["4irelabs developers <info@4irelabs.com>"]
edition = "2021"
license = "Unlicense"
description = "Runtime API module for dao-rpc."

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
]
